--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "@rollup/plugin-typescript": "^10.0.1",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "postcss": "^8.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "postcss": "^8.4.19",
     "rollup": "^3.7.0",
     "rollup-plugin-dts": "^5.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
+    "sass": "^1.56.1",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4"
   },
