--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "React setup",
   "scripts": {
-    "rollup": "rm -Rf dist/ && rollup -c"
+    "dev": "rm -Rf dist/ && rollup -c -w"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -25,8 +25,10 @@
     "react-dom": "^18.2.0",
     "rollup": "^3.7.0",
     "rollup-plugin-dts": "^5.0.0",
+    "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-serve": "^2.0.2",
     "sass": "^1.56.1",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4"
